# lib-typespec-api

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
plugin/: Cargo.toml  plugin.toml
plugin/src/: lib.rs
src/: ast.rs  lexer.rs  lib.rs  parser.rs
src/codegen/: mod.rs  openapi.rs  python.rs  rust.rs  typescript.rs
tests/: codegen_python_tests.rs  codegen_rust_tests.rs  codegen_typescript_tests.rs  integration_tests.rs  lexer_tests.rs  parser_tests.rs
typespec/main/: agents.tsp  auth.tsp  common.tsp  integrations.tsp  main.tsp  tasks.tsp
