[package]
name = "lib-typespec-api"
version = "0.1.0"
edition = "2021"
description = "TypeSpec parser and multi-language code generator in pure Rust"
license = "MIT"

[lib]
name = "typespec_api"
path = "src/lib.rs"

[[bin]]
name = "tsp-gen"
path = "src/bin/generate.rs"

[dependencies]
# Parsing
logos = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
thiserror = "2"
anyhow = "1"
convert_case = "0.6"

# Watch mode (for binary)
notify = "8"
ctrlc = "3"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
insta = "1"
