[package]
name = "tsp-gen-plugin"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "ADI plugin for TypeSpec code generation with file watching"
authors = ["ADI Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
typespec_api = { package = "lib-typespec-api", path = ".." }
lib-plugin-abi = { path = "../../lib-plugin-abi" }
abi_stable = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
notify = "8"
ctrlc = "3"
chrono = "0.4"
